test_scores/negative_dimers/features/P50402.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P50402.pkl.xz